--- a/front-end/style.css
+++ b/front-end/style.css
@@ -7,6 +7,12 @@ main {
   margin: 0;
 }
 
+.option-groups-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .option-group {
   border: 1px solid #ccc;
   padding: 10px;
@@ -18,4 +24,35 @@ main {
   position: absolute;
   top: 0;
   right: 0;
+}
+
+/* tab  */
+.tabs {
+  margin-top: 40px;
+}
+
+.tab-buttons {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.tab-button {
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px 4px 0 0;
+  background-color: transparent;
+}
+
+.tab-button.active {
+  border-bottom: 1px solid #000;
+}
+
+.tab-content {
+  display: none;
+}
+
+.tab-content.active {
+  display: block;
 }
