--- a/front-end/style.css
+++ b/front-end/style.css
@@ -3,6 +3,7 @@ main {
   margin: auto;
 }
 
+.variant-box h3,
 .option-group h3 {
   margin: 0;
 }
@@ -13,6 +14,7 @@ main {
   align-items: center;
 }
 
+.variant-box,
 .option-group {
   border: 1px solid #ccc;
   padding: 10px;
@@ -20,6 +22,7 @@ main {
   position: relative;
 }
 
+.delete-variant,
 .delete-option-group {
   position: absolute;
   top: 0;
